beldex_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     virtual uint64_t getRefreshFromBlockHeight() const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_getRefreshFromBlockHeight(void* wallet_ptr);
//     virtual void setRecoveringFromSeed(bool recoveringFromSeed) = 0;
extern ADDAPI void BELDEX_Wallet_setRecoveringFromSeed(void* wallet_ptr, bool recoveringFromSeed);
//     virtual void setRecoveringFromDevice(bool recoveringFromDevice) = 0;
extern ADDAPI void BELDEX_Wallet_setRecoveringFromDevice(void* wallet_ptr, bool recoveringFromDevice);
//     virtual void setSubaddressLookahead(uint32_t major, uint32_t minor) = 0;
extern ADDAPI void BELDEX_Wallet_setSubaddressLookahead(void* wallet_ptr, uint32_t major, uint32_t minor);
//     virtual bool connectToDaemon() = 0;
extern ADDAPI bool BELDEX_Wallet_connectToDaemon(void* wallet_ptr);
//     virtual ConnectionStatus connected() const = 0;
extern ADDAPI int BELDEX_Wallet_connected(void* wallet_ptr);
//     virtual void setTrustedDaemon(bool arg) = 0;
extern ADDAPI void BELDEX_Wallet_setTrustedDaemon(void* wallet_ptr, bool arg);
//     virtual bool trustedDaemon() const = 0;
extern ADDAPI bool BELDEX_Wallet_trustedDaemon(void* wallet_ptr);
//     virtual bool setProxy(const std::string &address) = 0;
extern ADDAPI bool BELDEX_Wallet_setProxy(void* wallet_ptr, const char* address);
//     virtual uint64_t balance(uint32_t accountIndex = 0) const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_balance(void* wallet_ptr, uint32_t accountIndex);
//     uint64_t balanceAll() const {
//         uint64_t result = 0;
//         for (uint32_t i = 0; i < numSubaddressAccounts(); ++i)
//             result += balance(i);
//         return result;
//     }
//     virtual uint64_t unlockedBalance(uint32_t accountIndex = 0) const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_unlockedBalance(void* wallet_ptr, uint32_t accountIndex);
//     uint64_t unlockedBalanceAll() const {
//         uint64_t result = 0;
//         for (uint32_t i = 0; i < numSubaddressAccounts(); ++i)
//             result += unlockedBalance(i);
//         return result;
//     }
//     virtual bool watchOnly() const = 0;
//    virtual uint64_t viewOnlyBalance(uint32_t accountIndex, const std::vector<std::string> &key_images = {}) const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_viewOnlyBalance(void* wallet_ptr, uint32_t accountIndex);
extern ADDAPI bool BELDEX_Wallet_watchOnly(void* wallet_ptr);
//     virtual bool isDeterministic() const = 0;
extern ADDAPI bool BELDEX_Wallet_isDeterministic(void* wallet_ptr);
//     virtual uint64_t blockChainHeight() const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_blockChainHeight(void* wallet_ptr);
//     virtual uint64_t approximateBlockChainHeight() const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_approximateBlockChainHeight(void* wallet_ptr);
//     virtual uint64_t estimateBlockChainHeight() const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_estimateBlockChainHeight(void* wallet_ptr);
//     virtual uint64_t daemonBlockChainHeight() const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_daemonBlockChainHeight(void* wallet_ptr);
extern ADDAPI uint64_t BELDEX_Wallet_daemonBlockChainHeight_cached(void* wallet_ptr);
extern ADDAPI void BELDEX_Wallet_daemonBlockChainHeight_runThread(void* wallet_ptr, int seconds);
//     virtual uint64_t daemonBlockChainTargetHeight() const = 0;
extern ADDAPI uint64_t BELDEX_Wallet_daemonBlockChainTargetHeight(void* wallet_ptr);
//     virtual bool synchronized() const = 0;
extern ADDAPI bool BELDEX_Wallet_synchronized(void* wallet_ptr);
//     static std::string displayAmount(uint64_t amount);
extern ADDAPI const char* BELDEX_Wallet_displayAmount(uint64_t amount);
//     static uint64_t amountFromString(const std::string &amount);
extern ADDAPI uint64_t BELDEX_Wallet_amountFromString(const char* amount);
extern ADDAPI void BELDEX_Wallet_setLedgerCallback(void (*sendToLedgerDevice)(unsigned char *command, unsigned int cmd_len));