impls/monero.dart/lib/src/generated_bindings_beldex.g.dart


  late final _BELDEX_Wallet_getRefreshFromBlockHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_getRefreshFromBlockHeight');
  late final _BELDEX_Wallet_getRefreshFromBlockHeight =
      _BELDEX_Wallet_getRefreshFromBlockHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  void BELDEX_Wallet_setRecoveringFromSeed(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool recoveringFromSeed,
  ) {
    return _BELDEX_Wallet_setRecoveringFromSeed(
      wallet_ptr,
      recoveringFromSeed,
    );
  }

  late final _BELDEX_Wallet_setRecoveringFromSeedPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'BELDEX_Wallet_setRecoveringFromSeed');
  late final _BELDEX_Wallet_setRecoveringFromSeed =
      _BELDEX_Wallet_setRecoveringFromSeedPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  void BELDEX_Wallet_setRecoveringFromDevice(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool recoveringFromDevice,
  ) {
    return _BELDEX_Wallet_setRecoveringFromDevice(
      wallet_ptr,
      recoveringFromDevice,
    );
  }

  late final _BELDEX_Wallet_setRecoveringFromDevicePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'BELDEX_Wallet_setRecoveringFromDevice');
  late final _BELDEX_Wallet_setRecoveringFromDevice =
      _BELDEX_Wallet_setRecoveringFromDevicePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  void BELDEX_Wallet_setSubaddressLookahead(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int major,
    int minor,
  ) {
    return _BELDEX_Wallet_setSubaddressLookahead(
      wallet_ptr,
      major,
      minor,
    );
  }

  late final _BELDEX_Wallet_setSubaddressLookaheadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Uint32)>>('BELDEX_Wallet_setSubaddressLookahead');
  late final _BELDEX_Wallet_setSubaddressLookahead =
      _BELDEX_Wallet_setSubaddressLookaheadPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int, int)>();

  bool BELDEX_Wallet_connectToDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_connectToDaemon(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_connectToDaemonPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_connectToDaemon');
  late final _BELDEX_Wallet_connectToDaemon = _BELDEX_Wallet_connectToDaemonPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_Wallet_connected(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_connected(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_connectedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_connected');
  late final _BELDEX_Wallet_connected = _BELDEX_Wallet_connectedPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>)>();

  void BELDEX_Wallet_setTrustedDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
    bool arg,
  ) {
    return _BELDEX_Wallet_setTrustedDaemon(
      wallet_ptr,
      arg,
    );
  }

  late final _BELDEX_Wallet_setTrustedDaemonPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>>(
      'BELDEX_Wallet_setTrustedDaemon');
  late final _BELDEX_Wallet_setTrustedDaemon =
      _BELDEX_Wallet_setTrustedDaemonPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, bool)>();

  bool BELDEX_Wallet_trustedDaemon(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_trustedDaemon(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_trustedDaemonPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_trustedDaemon');
  late final _BELDEX_Wallet_trustedDaemon = _BELDEX_Wallet_trustedDaemonPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_Wallet_setProxy(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> address,
  ) {
    return _BELDEX_Wallet_setProxy(
      wallet_ptr,
      address,
    );
  }

  late final _BELDEX_Wallet_setProxyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Wallet_setProxy');
  late final _BELDEX_Wallet_setProxy = _BELDEX_Wallet_setProxyPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int BELDEX_Wallet_balance(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _BELDEX_Wallet_balance(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _BELDEX_Wallet_balancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<ffi.Void>, ffi.Uint32)>>('BELDEX_Wallet_balance');
  late final _BELDEX_Wallet_balance = _BELDEX_Wallet_balancePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int)>();

  int BELDEX_Wallet_unlockedBalance(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _BELDEX_Wallet_unlockedBalance(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _BELDEX_Wallet_unlockedBalancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('BELDEX_Wallet_unlockedBalance');
  late final _BELDEX_Wallet_unlockedBalance = _BELDEX_Wallet_unlockedBalancePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int BELDEX_Wallet_viewOnlyBalance(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
  ) {
    return _BELDEX_Wallet_viewOnlyBalance(
      wallet_ptr,
      accountIndex,
    );
  }

  late final _BELDEX_Wallet_viewOnlyBalancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('BELDEX_Wallet_viewOnlyBalance');
  late final _BELDEX_Wallet_viewOnlyBalance = _BELDEX_Wallet_viewOnlyBalancePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  bool BELDEX_Wallet_watchOnly(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_watchOnly(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_watchOnlyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_watchOnly');
  late final _BELDEX_Wallet_watchOnly = _BELDEX_Wallet_watchOnlyPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_Wallet_isDeterministic(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_isDeterministic(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_isDeterministicPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_isDeterministic');
  late final _BELDEX_Wallet_isDeterministic = _BELDEX_Wallet_isDeterministicPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_Wallet_blockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_blockChainHeight(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_blockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_blockChainHeight');
  late final _BELDEX_Wallet_blockChainHeight =
      _BELDEX_Wallet_blockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_Wallet_approximateBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_approximateBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_approximateBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_approximateBlockChainHeight');
  late final _BELDEX_Wallet_approximateBlockChainHeight =
      _BELDEX_Wallet_approximateBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_Wallet_estimateBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_estimateBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_estimateBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_estimateBlockChainHeight');
  late final _BELDEX_Wallet_estimateBlockChainHeight =
      _BELDEX_Wallet_estimateBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_Wallet_daemonBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_daemonBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_daemonBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_daemonBlockChainHeight');
  late final _BELDEX_Wallet_daemonBlockChainHeight =
      _BELDEX_Wallet_daemonBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_Wallet_daemonBlockChainHeight_cached(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_daemonBlockChainHeight_cached(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_daemonBlockChainHeight_cachedPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_daemonBlockChainHeight_cached');
  late final _BELDEX_Wallet_daemonBlockChainHeight_cached =
      _BELDEX_Wallet_daemonBlockChainHeight_cachedPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  void BELDEX_Wallet_daemonBlockChainHeight_runThread(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int seconds,
  ) {
    return _BELDEX_Wallet_daemonBlockChainHeight_runThread(
      wallet_ptr,
      seconds,
    );
  }

  late final _BELDEX_Wallet_daemonBlockChainHeight_runThreadPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'BELDEX_Wallet_daemonBlockChainHeight_runThread');
  late final _BELDEX_Wallet_daemonBlockChainHeight_runThread =
      _BELDEX_Wallet_daemonBlockChainHeight_runThreadPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int)>();

  int BELDEX_Wallet_daemonBlockChainTargetHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_daemonBlockChainTargetHeight(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_daemonBlockChainTargetHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_daemonBlockChainTargetHeight');
  late final _BELDEX_Wallet_daemonBlockChainTargetHeight =
      _BELDEX_Wallet_daemonBlockChainTargetHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_Wallet_synchronized(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_synchronized(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_synchronizedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_synchronized');
  late final _BELDEX_Wallet_synchronized = _BELDEX_Wallet_synchronizedPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_Wallet_displayAmount(
    int amount,
  ) {
    return _BELDEX_Wallet_displayAmount(
      amount,
    );
  }

  late final _BELDEX_Wallet_displayAmountPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Uint64)>>(
          'BELDEX_Wallet_displayAmount');
  late final _BELDEX_Wallet_displayAmount = _BELDEX_Wallet_displayAmountPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  int BELDEX_Wallet_amountFromString(
    ffi.Pointer<ffi.Char> amount,
  ) {
    return _BELDEX_Wallet_amountFromString(
      amount,
    );
  }
